# newlinux

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/: workflows.yml
.github/workflows/: build.yml
src/: main.cpp
